--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body{
 }
 
 /*Nav menu*/
-nav{
+.desktop_menu{
     background-color: #f5f5f5;
 }
 
@@ -51,11 +51,22 @@ main{
     position: relative;
 }
 
-.main_photo img{
+.slider-container {
     width: 100%;
-    height: 50%;
-    object-fit: contain;
+    overflow: hidden;
 }
+
+.slide {
+    width: 100%;
+    display: none;
+}
+
+.slide img {
+    width: 100%;
+    height: 600px;
+    object-fit: cover;
+}
+
 .text_home{
     position: absolute;
     top: 10%;
@@ -318,10 +329,21 @@ font-family: 'Montserrat Alternates', sans-serif;font-family: 'Rubik', sans-seri
         display: flex;
         align-items: center;
         justify-content: space-between;
+        background-color: rgba(243, 249, 251);
+        position: fixed;
+        z-index: 1;
+    }
+    .phone_menu img{
+        width: 25%;
     }
     .text_home{
-        top: 5%;
+        bottom: 0%;
         left: 5%;
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+        justify-content: end;
+        width: 90%;
     }
     .text_home h1{
         font-size: 3rem;
@@ -348,5 +370,13 @@ font-family: 'Montserrat Alternates', sans-serif;font-family: 'Rubik', sans-seri
         grid-template-columns: repeat(2, .5fr);
         gap: 30px 10px;
     }
-    
+    .about_day h3{
+        font-size: 3rem;
+    }
+    .about_day h2{
+        font-size: 1.8rem;
+    }
+    .slide img {
+        height: 500px;
+    }
 }
