--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,24 @@ body{
 }
 
 /*Nav menu*/
+
+header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    animation: header-desktop linear both;
+    animation-timeline: scroll(root block);
+    animation-range: 0 1300px;
+}
+
+@keyframes header-desktop {
+    to{
+        background-color: #f3f9fb94;
+        z-index: 3;  
+        backdrop-filter: blur(5px);
+    }
+}
+
 .desktop_menu{
     background-color: rgba(245, 245, 245);
 }
@@ -103,6 +121,9 @@ ul img{
     font-family: 'Montserrat Alternates', sans-serif;
     font-weight: 200;
     background-color: #f5f5f5;
+    animation: reveal linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 30%;
 }
 .time_left div{
     color: #c0a080;
@@ -157,6 +178,9 @@ ul img{
 
 .text_story img{
     width: 100%;
+    animation: reveal linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 30%;
 }
 .image_story{
     display: flex;
@@ -172,6 +196,9 @@ ul img{
     width: 100%;
     height: 80%;
     object-fit: cover;
+    animation: reveal linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 30%;
 }
 .frame_more_about a{
     position: absolute;
@@ -253,6 +280,9 @@ ul img{
     width: 100%;
     height: 60%;
     object-fit: cover;
+    animation: reveal linear both;
+    animation-timeline: view();
+    animation-range: entry 15% cover 30%;
 }
 
 
@@ -593,6 +623,18 @@ ul img{
     from {color: transparent;}
     to {color: #f3f9fb;}
 }
+@keyframes reveal {
+    from{
+        opacity: 0;
+        translate: 0 50px;
+        scale: .8;
+    }
+    to{
+        opacity: 1;
+        translate: 0 0;
+        scale: 1;
+    }
+}
 
 
 
@@ -609,7 +651,6 @@ ul img{
         justify-content: space-between;
         background-color: rgba(243, 249, 251);
         position: fixed;
-        z-index: 1;
     }
     .menu_p{
         width: 30%;
@@ -659,7 +700,7 @@ ul img{
         font-size: 1.8rem;
     }
     .slide img {
-        height: 670px;
+        height: 570px;
     }
 
     .nav_phone_menu li {
